// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSidebars normal site with sidebars 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "foo/bar",
          "type": "doc",
        },
        Object {
          "id": "foo/baz",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars site with sidebars & versioned sidebars 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "foo/bar",
          "type": "doc",
        },
        Object {
          "id": "foo/baz",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
  "version-1.0.0-docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.0-foo/bar",
          "type": "doc",
        },
        Object {
          "id": "version-1.0.0-foo/baz",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.0-hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
  "version-1.0.1-docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.1-foo/bar",
          "type": "doc",
        },
        Object {
          "id": "version-1.0.1-foo/baz",
          "type": "doc",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "version-1.0.1-hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars site without sidebars 1`] = `Object {}`;
